# Note: keep this file in wiki format for easy pasting to the proto-ch wiki

= GENI Clearinghouse and Portal Release Notes =

== 1.7 ==
  * List of project in download omni bundle should only include active projects (#554)
  * On new project page, note showing that name of lead is public (#469)
  * Have raw manifest appear in a separate window/tab/popup (#520)
  * New project lead email had broken link (#593)
  * New project lead email sometimes had blank for name (#521)
  * Add timestamps to pgch logs (#398)
  * Script to delete an outside cert (#601)

== 1.6.2 ==
  * Handle EPPNs as case-insensitive strings (#597)

== 1.6.1 ==
  * Import databascript was losing non member log messages (#589)

== 1.6 ==
  * Add more bin scripts to install (#569)
  * portal_enable_abac controls all use of ABAC - so all disabled now (#556)
  * update_user_certs script updates the ma_outside_cert table for DB transition (#564)
  * Add missing copyright (#576)
  * Change member IDs when importing to new DB. And make a file of emails of people who had outside certs. (#577)
  * Re-enable some functions in maintenance mode for operators (#579)
  * Fix Accept Project Invite breadcrumbs (#582)
  * Add cainfo.html (#578)
  * Install 2 cs / lockdown sql files (#586)

== 1.5 ==
  * Fix error return on renewslice error in pgch (for omni/Flack) (#555)
  * Remove some hardcoded URNs (progress on #10)
  * Clean up page to accept project invitations (#530)
  * Sign experimenter data message to GEMINI (#560)
  * Remove use of /bin/hostname in scripts & code (#354)
  * Fix a DB authentication bug in geni-add-trusted-tool (#505)
  * Clean up make install to avoid ~ and # files (#488)
  * Install operator scripts in /usr/local/bin on portals (#499)
  * Add `authority` field to omni-bundle and template omni_config (#551)
  * Update certificate creation instructions to match omni-configure (#552)
  * Make omni-bundle download be the same regardless of the number of projects (#566)